--- a/.streamlit/secrets.toml
+++ b/.streamlit/secrets.toml
@@ -1,6 +1,6 @@
 [connections.ppmpkm]
 dialect = "postgresql"
-username = "oc"
-password = "kwl@110"
-host = "10.20.254.228"
-database = "penerimaan"
+username = "postgres"
+password = "sgwi2341"
+host = "localhost"
+database = "jaktim"
