add jenis pajak and sektor

--- a/.streamlit/secrets.toml
+++ b/.streamlit/secrets.toml
@@ -1,6 +1,6 @@
 [connections.ppmpkm]
 dialect = "postgresql"
-username = "postgres"
+username = "sugengw07"
 password = "sgwi2341"
 host = "localhost"
-database = "jaktim"
+database = "sugengw07"
