--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,8 @@
 version: "3"
 services:
-  web:
+  trms:
     build: .
     ports:
       - 8501:8501
+    extra_hosts:
+      - "host.docker.internal:host-gateway"
