add update_db via cron

--- a/scripts/.env
+++ b/scripts/.env
@@ -1,6 +1,12 @@
 CONN_URI = "postgres://postgres:sgwi2341@localhost:5432/jaktim"
 
-POSTGRES_USERNAME = 'postgres'
-POSTGRES_PASSWORD = 'sgwi2341'
-POSTGRES_URL = 'localhost'
-POSTGRES_TABLE = 'jaktim'
+POSTGRES_USERNAME = 'oc'
+POSTGRES_PASSWORD = 'kwl@110'
+POSTGRES_URL = '10.20.254.228'
+POSTGRES_TABLE = 'penerimaan'
+
+
+MYSQL_USERNAME = '810202558'
+MYSQL_PASSWORD = 'KilauJaktim02558'
+MYSQL_URL = '10.20.254.228'
+MYSQL_TABLE = 'mpninfo'
