--- a/scripts/.env
+++ b/scripts/.env
@@ -10,3 +10,6 @@ MYSQL_USERNAME = '810202558'
 MYSQL_PASSWORD = 'KilauJaktim02558'
 MYSQL_URL = '10.20.254.228'
 MYSQL_TABLE = 'mpninfo'
+
+
+DETA_KEY = "c0xkqlvnn14_PrKbK7zM4zimkRWFaSSBrd3mrzzL96c4"
