--- a/scripts/.env
+++ b/scripts/.env
@@ -1,9 +1,9 @@
 CONN_URI = "postgres://postgres:sgwi2341@localhost:5432/jaktim"
 
-POSTGRES_USERNAME = 'oc'
-POSTGRES_PASSWORD = 'kwl@110'
-POSTGRES_URL = '10.20.254.228'
-POSTGRES_TABLE = 'penerimaan'
+POSTGRES_USERNAME = 'postgres'
+POSTGRES_PASSWORD = 'sgwi2341'
+POSTGRES_URL = 'localhost'
+POSTGRES_TABLE = 'jaktim'
 
 
 MYSQL_USERNAME = '810202558'
